# ELM_MNIST

./: README.md  pyproject.toml
elm_mnist/: ELM_MNIST.ipynb
